src/bootstrap/test/v0_8/rejects/09_pub_import_collision/first.zg
# requires: v0.18

pub fn foo() -> int {
	return 1
}
